# Crenata

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml
crenata/: __init__.py  __main__.py  argparser.py  client.py  config.py  crenataneispy.py  embed.py  exception.py  interaction.py  neispy.py  paginator.py  registry.py  typing.py  utils.py
crenata/abc/: builder.py  command.py  database.py  domain.py
crenata/abc/usecase/: user.py
crenata/application/: __init__.py  client.py  interaction.py  strings.py  timetable.py  tree.py  utils.py
crenata/application/command/: tree.py
crenata/application/commands/: exit.py  profile.py  register.py  tree.py
crenata/application/commands/preferences/: __init__.py  edit.py
crenata/application/commands/school/: __init__.py  meal.py  search.py  setup.py  timetable.py  users.py
crenata/application/embeds/: __init__.py  exit.py  meal.py  profile.py  school.py  timetable.py  users.py
crenata/application/error/: callback.py  exceptions.py  handler.py
crenata/application/view/: __init__.py  confirm.py  paginator.py  selector.py
crenata/commands/: __init__.py  meal.py  register.py  timetable.py  utils.py
crenata/commands/default/: meal.py  register.py  timetable.py
crenata/core/: exceptions.py  strings.py
crenata/core/majorinfo/: exceptions.py
crenata/core/majorinfo/domain/: entity.py  repository.py
crenata/core/majorinfo/usecases/: get.py
crenata/core/meal/: exceptions.py
crenata/core/meal/domain/: entity.py  repository.py
crenata/core/meal/usecases/: get.py
crenata/core/preferences/: exceptions.py
crenata/core/preferences/domain/: entity.py  repository.py
crenata/core/preferences/usecases/: get.py  update.py
crenata/core/school/: exception.py
crenata/core/schoolinfo/: exceptions.py
crenata/core/timetable/: exceptions.py
crenata/core/user/: exceptions.py
crenata/database/: __init__.py  base.py  query.py  registry.py
crenata/database/repository/: __init__.py  preferences.py  schoolinfo.py  user.py
crenata/database/schema/: __init__.py  mixin.py  preferences.py  schoolinfo.py  user.py
crenata/database/table/: __init__.py  preferences.py  schoolinfo.py  user.py
crenata/discord/: __init__.py  allergy.py  client.py  confirm.py  embed.py  interaction.py  paginator.py  select.py  selecter.py  timetable.py  view.py
crenata/discord/commands/: __init__.py  exit.py  meal.py  profile.py  register.py  timetable.py
crenata/discord/embed/: major.py  meal.py  school.py  timetable.py  users.py
crenata/discord/events/: error.py
crenata/domain/: user.py
crenata/domain/entities/: user.py
crenata/domain/usecase/: __init__.py  user.py
crenata/entities/: __init__.py  preferences.py  schoolinfo.py  user.py
crenata/events/: error.py
crenata/infrastructure/sqlalchemy/: __init__.py  base.py  mixin.py
crenata/infrastructure/utils/: argparser.py  config.py  datetime.py
crenata/utils/: datetime.py  discord.py
docs/: README.md  development.md
migration/: __main__.py
migration/legacy/: __init__.py  base.py  query.py
migration/legacy/repository/: __init__.py  preferences.py  schoolinfo.py  user.py
migration/legacy/schema/: __init__.py  mixin.py  preferences.py  schoolinfo.py  user.py
tests/: config.json  conftest.py  test_args.py  test_datetime.py  test_embed.py  test_neispy.py  test_preferences.py  test_school_info.py  test_user.py
(+47 files in other folders)
