[tool.poetry]
name = "crenata"
version = "0.1.0"
description = ""
authors = ["Ryu Juheon <saidbysolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
neispy = "^4.2.0"
pydantic = "^1.10.2"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}

[tool.poetry.group.style.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.981"

[tool.isort]
src_paths = ["crenata", "tests"]
profile = "black"

[tool.black]
preview = true

[tool.mypy]
files = ["crenata", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
