[tool.poetry]
name = "crenata"
version = "0.1.0"
description = ""
authors = ["Ryu Juheon <saidbysolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
neispy = "^5.0.1"
SQLAlchemy = "^2.0.15"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
asyncpg = "^0.27.0"


[tool.poetry.group.style.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.3.0"

[tool.isort]
src_paths = ["crenata", "tests"]
profile = "black"

[tool.black]
preview = true

[tool.mypy]
files = ["crenata", "tests"]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
